--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,7 +1,27 @@
+
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
-
 runConfig:
-  # Increase this value if you'd like to automatically spin up
-  # more instances in response to increased traffic.
-  maxInstances: 1
+  minInstances: 0
+  maxInstances: 2
+  concurrency: 80
+  cpu: 1
+  memoryMiB: 512
+env:
+  - variable: GENKIT_ENV
+    value: prod
+  - variable: GCLOUD_PROJECT
+    secret: GCLOUD_PROJECT
+  - variable: NEXT_PUBLIC_FIREBASE_CONFIG
+    secret: NEXT_PUBLIC_FIREBASE_CONFIG
+  - variable: GOOGLE_API_KEY
+    secret: GOOGLE_API_KEY
+    availability:
+      - BUILD
+      - RUNTIME
+  - variable: FIREBASE_PRIVATE_KEY
+    value: '' # This is now handled by Application Default Credentials on App Hosting
+  - variable: FIREBASE_CLIENT_EMAIL
+    value: '' # This is now handled by Application Default Credentials on App Hosting
+  - variable: FIREBASE_PROJECT_ID
+    value: '' # This is now handled by Application Default Credentials on App Hosting
